Upgrade to use JDK 17 as a baseline